<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.salman.gitsy.utility.UtilityKt" />

        <variable
            name="model"
            type="com.salman.gitsy.domain.database.entity.UserEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/spacing_medium"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/spacing_extra_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadAvatar="@{model.avatarUrl}"
            app:srcCompat="@drawable/ic_avatar_placeholder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:ellipsize="end"
            android:fontFamily="@font/varela_round"
            android:maxLength="30"
            android:text="@{model.name}"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            tools:text="Salman Zach" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:fontFamily="@font/varela_round"
            android:maxLength="30"
            android:text="@{'@'+model.userName}"
            android:textColor="@color/blackLight"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayName"
            tools:text="'@'salmanzach" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_extra_large"
            android:layout_marginTop="@dimen/spacing_small"
            android:fontFamily="@font/varela_round"
            android:gravity="center"
            android:maxLines="3"
            android:text="@{model.bio}"
            android:textColor="@color/blackLight"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="@{model.bio.empty?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:text="This is my test bio from github website for gitsy app!. Be the one to love this app" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@{UtilityKt.formattedCount(model.followers)}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="3k" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@string/followers"
                    android:textColor="@color/blackLight"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@{UtilityKt.formattedCount(model.following)}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="12k" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@string/followings"
                    android:textColor="@color/blackLight"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@{UtilityKt.formattedCount(model.publicGists)}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="353k" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@string/gists"
                    android:textColor="@color/blackLight"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@{UtilityKt.formattedCount(model.publicRepos)}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="353k" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/varela_round"
                    android:gravity="center"
                    android:text="@string/repos"
                    android:textColor="@color/blackLight"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawableStart="@drawable/ic_company"
            android:drawablePadding="@dimen/spacing_small"
            android:fontFamily="@font/varela_round"
            android:gravity="center_vertical"
            android:text="@{model.company}"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{model.company.empty?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats"
            tools:text="Khushibaby Inc." />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/spacing_small"
            android:fontFamily="@font/varela_round"
            android:gravity="center_vertical"
            android:text="@{model.email}"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{model.email.empty?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company"
            tools:text="salmansaifi66@gmail.com" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:drawableStart="@drawable/ic_twitter"
            android:drawablePadding="@dimen/spacing_small"
            android:fontFamily="@font/varela_round"
            android:gravity="center_vertical"
            android:text="@{model.twitterUsername}"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{model.twitterUsername.empty?View.GONE:View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:text="salmanzach" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/work"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_medium"
            android:drawableStart="@drawable/ic_work"
            android:drawablePadding="@dimen/spacing_small"
            android:fontFamily="@font/varela_round"
            android:gravity="center_vertical"
            android:text="@{model.hireable?@string/openToWork:@string/closedToWork}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twitter"
            tools:text="@string/openToWork" />


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/background_round_white"
            android:elevation="2dp"
            android:padding="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
